src/main/java/PseudoAssemblerParser.java
// Generated from C:/Users/Maciek/Desktop/studia/JFK/PseudoAssembler/src/main/antlr\PseudoAssembler.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PseudoAssemblerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, MOV=5, PUSH=6, INT=7, XOR=8, ADD=9, SUB=10, 
		MULT=11, RPAREN=12, LPAREN=13, REG=14, DIG=15, DELI=16;
	public static final int
		RULE_rule_set = 0, RULE_single_rule = 1, RULE_multiarg = 2, RULE_singlearg = 3, 
		RULE_intexpr = 4, RULE_arthmeticexpr = 5;
	private static String[] makeRuleNames() {
		return new String[] {
			"rule_set", "single_rule", "multiarg", "singlearg", "intexpr", "arthmeticexpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "' '", "'\t'", "'\n'", "'0x80'", "'mov'", "'push'", "'int'", "'xor'", 
			"'+'", "'-'", "'*'", "')'", "'('", null, null, "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "MOV", "PUSH", "INT", "XOR", "ADD", "SUB", 
			"MULT", "RPAREN", "LPAREN", "REG", "DIG", "DELI"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PseudoAssembler.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PseudoAssemblerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Rule_setContext extends ParserRuleContext {
		public Single_ruleContext single_rule() {
			return getRuleContext(Single_ruleContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PseudoAssemblerParser.EOF, 0); }
		public Rule_setContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rule_set; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAssemblerVisitor ) return ((PseudoAssemblerVisitor<? extends T>)visitor).visitRule_set(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rule_setContext rule_set() throws RecognitionException {
		Rule_setContext _localctx = new Rule_setContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_rule_set);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(12);
			single_rule();
			setState(16);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__1) {
				{
				{
				setState(13);
				_la = _input.LA(1);
				if ( !(_la==T__0 || _la==T__1) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(18);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(19);
			_la = _input.LA(1);
			if ( !(_la==EOF || _la==T__2) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Single_ruleContext extends ParserRuleContext {
		public Single_ruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_rule; }
	 
		public Single_ruleContext() { }
		public void copyFrom(Single_ruleContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IntruleContext extends Single_ruleContext {
		public TerminalNode INT() { return getToken(PseudoAssemblerParser.INT, 0); }
		public IntexprContext intexpr() {
			return getRuleContext(IntexprContext.class,0);
		}
		public IntruleContext(Single_ruleContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAssemblerVisitor ) return ((PseudoAssemblerVisitor<? extends T>)visitor).visitIntrule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MovxorexprContext extends Single_ruleContext {
		public MultiargContext multiarg() {
			return getRuleContext(MultiargContext.class,0);
		}
		public TerminalNode MOV() { return getToken(PseudoAssemblerParser.MOV, 0); }
		public TerminalNode XOR() { return getToken(PseudoAssemblerParser.XOR, 0); }
		public MovxorexprContext(Single_ruleContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAssemblerVisitor ) return ((PseudoAssemblerVisitor<? extends T>)visitor).visitMovxorexpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PushexprContext extends Single_ruleContext {
		public TerminalNode PUSH() { return getToken(PseudoAssemblerParser.PUSH, 0); }
		public SingleargContext singlearg() {
			return getRuleContext(SingleargContext.class,0);
		}
		public PushexprContext(Single_ruleContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAssemblerVisitor ) return ((PseudoAssemblerVisitor<? extends T>)visitor).visitPushexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Single_ruleContext single_rule() throws RecognitionException {
		Single_ruleContext _localctx = new Single_ruleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_single_rule);
		int _la;
		try {
			setState(30);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MOV:
			case XOR:
				_localctx = new MovxorexprContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(21);
				_la = _input.LA(1);
				if ( !(_la==MOV || _la==XOR) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(22);
				match(T__0);
				setState(23);
				multiarg();
				}
				break;
			case PUSH:
				_localctx = new PushexprContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(24);
				match(PUSH);
				setState(25);
				match(T__0);
				setState(26);
				singlearg();
				}
				break;
			case INT:
				_localctx = new IntruleContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(27);
				match(INT);
				setState(28);
				match(T__0);
				setState(29);
				intexpr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultiargContext extends ParserRuleContext {
		public ArthmeticexprContext arthmeticexpr() {
			return getRuleContext(ArthmeticexprContext.class,0);
		}
		public TerminalNode DELI() { return getToken(PseudoAssemblerParser.DELI, 0); }
		public TerminalNode REG() { return getToken(PseudoAssemblerParser.REG, 0); }
		public MultiargContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiarg; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAssemblerVisitor ) return ((PseudoAssemblerVisitor<? extends T>)visitor).visitMultiarg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultiargContext multiarg() throws RecognitionException {
		MultiargContext _localctx = new MultiargContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_multiarg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			arthmeticexpr(0);
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(33);
				match(T__0);
				}
			}

			setState(36);
			match(DELI);
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(37);
				match(T__0);
				}
			}

			setState(40);
			match(REG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleargContext extends ParserRuleContext {
		public ArthmeticexprContext arthmeticexpr() {
			return getRuleContext(ArthmeticexprContext.class,0);
		}
		public SingleargContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singlearg; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAssemblerVisitor ) return ((PseudoAssemblerVisitor<? extends T>)visitor).visitSinglearg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SingleargContext singlearg() throws RecognitionException {
		SingleargContext _localctx = new SingleargContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_singlearg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			arthmeticexpr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntexprContext extends ParserRuleContext {
		public IntexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intexpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAssemblerVisitor ) return ((PseudoAssemblerVisitor<? extends T>)visitor).visitIntexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntexprContext intexpr() throws RecognitionException {
		IntexprContext _localctx = new IntexprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_intexpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArthmeticexprContext extends ParserRuleContext {
		public ArthmeticexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arthmeticexpr; }
	 
		public ArthmeticexprContext() { }
		public void copyFrom(ArthmeticexprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DigexprContext extends ArthmeticexprContext {
		public TerminalNode DIG() { return getToken(PseudoAssemblerParser.DIG, 0); }
		public DigexprContext(ArthmeticexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAssemblerVisitor ) return ((PseudoAssemblerVisitor<? extends T>)visitor).visitDigexpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RegexprContext extends ArthmeticexprContext {
		public TerminalNode REG() { return getToken(PseudoAssemblerParser.REG, 0); }
		public RegexprContext(ArthmeticexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAssemblerVisitor ) return ((PseudoAssemblerVisitor<? extends T>)visitor).visitRegexpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MultexprContext extends ArthmeticexprContext {
		public List<ArthmeticexprContext> arthmeticexpr() {
			return getRuleContexts(ArthmeticexprContext.class);
		}
		public ArthmeticexprContext arthmeticexpr(int i) {
			return getRuleContext(ArthmeticexprContext.class,i);
		}
		public TerminalNode MULT() { return getToken(PseudoAssemblerParser.MULT, 0); }
		public MultexprContext(ArthmeticexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAssemblerVisitor ) return ((PseudoAssemblerVisitor<? extends T>)visitor).visitMultexpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AddsubexprContext extends ArthmeticexprContext {
		public List<ArthmeticexprContext> arthmeticexpr() {
			return getRuleContexts(ArthmeticexprContext.class);
		}
		public ArthmeticexprContext arthmeticexpr(int i) {
			return getRuleContext(ArthmeticexprContext.class,i);
		}
		public TerminalNode ADD() { return getToken(PseudoAssemblerParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(PseudoAssemblerParser.SUB, 0); }
		public AddsubexprContext(ArthmeticexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAssemblerVisitor ) return ((PseudoAssemblerVisitor<? extends T>)visitor).visitAddsubexpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParenexprContext extends ArthmeticexprContext {
		public TerminalNode LPAREN() { return getToken(PseudoAssemblerParser.LPAREN, 0); }
		public ArthmeticexprContext arthmeticexpr() {
			return getRuleContext(ArthmeticexprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PseudoAssemblerParser.RPAREN, 0); }
		public ParenexprContext(ArthmeticexprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PseudoAssemblerVisitor ) return ((PseudoAssemblerVisitor<? extends T>)visitor).visitParenexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArthmeticexprContext arthmeticexpr() throws RecognitionException {
		return arthmeticexpr(0);
	}

	private ArthmeticexprContext arthmeticexpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ArthmeticexprContext _localctx = new ArthmeticexprContext(_ctx, _parentState);
		ArthmeticexprContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_arthmeticexpr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LPAREN:
				{
				_localctx = new ParenexprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(47);
				match(LPAREN);
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(48);
					match(T__0);
					}
				}

				setState(51);
				arthmeticexpr(0);
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(52);
					match(T__0);
					}
				}

				setState(55);
				match(RPAREN);
				}
				break;
			case DIG:
				{
				_localctx = new DigexprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(57);
				match(DIG);
				}
				break;
			case REG:
				{
				_localctx = new RegexprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(58);
				match(REG);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(81);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(79);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
					case 1:
						{
						_localctx = new MultexprContext(new ArthmeticexprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_arthmeticexpr);
						setState(61);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(63);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==T__0) {
							{
							setState(62);
							match(T__0);
							}
						}

						setState(65);
						match(MULT);
						setState(67);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==T__0) {
							{
							setState(66);
							match(T__0);
							}
						}

						setState(69);
						arthmeticexpr(6);
						}
						break;
					case 2:
						{
						_localctx = new AddsubexprContext(new ArthmeticexprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_arthmeticexpr);
						setState(70);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(72);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==T__0) {
							{
							setState(71);
							match(T__0);
							}
						}

						setState(74);
						_la = _input.LA(1);
						if ( !(_la==ADD || _la==SUB) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(76);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==T__0) {
							{
							setState(75);
							match(T__0);
							}
						}

						setState(78);
						arthmeticexpr(5);
						}
						break;
					}
					} 
				}
				setState(83);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 5:
			return arthmeticexpr_sempred((ArthmeticexprContext)_localctx, predIndex);
		}
		return true;
	}
	private boolean arthmeticexpr_sempred(ArthmeticexprContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0:
			return precpred(_ctx, 5);
		case 1:
			return precpred(_ctx, 4);
		}
		return true;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}